@@ -1,12 +1,0 @@
-ifdef STATIC
-    LIB_NAME = libopenWSs.a
-else
-    LIB_NAME = libopenWS.so
-endif
-LIB_FULLNAME = $(LIB_DIR)/$(LIB_NAME)
-LDFLAGS += -fPIC -lglfw3 -lGLEW -lGL
-CXXFLAGS += -fPIC
-
-install: $(LIB_FULLNAME)
-	cp -r $(INCLUDE_DIR) /usr/local
-	cp $(LIB_FULLNAME) /usr/lib/
