@@ -1,11 +1,0 @@
-ifdef STATIC
-    LIB_NAME = libopenWS.a
-    LIB_FULLNAME = $(LIB_DIR)/$(LIB_NAME)
-else
-    LIB_NAME = libopenWS.dll
-    IMP_LIB_NAME = libopenWS.dll.a
-    LIB_FULLNAME = $(BIN_DIR)/$(LIB_NAME)
-    DLIBFLAGS += -Wl,--out-implib,$(LIB_DIR)/$(IMP_LIB_NAME)
-endif
-
-LDFLAGS += -lglew32 -lglfw3 -lgdi32 -lopengl32
