@@ -1,22 +1,0 @@
-ifdef STATIC
-	LIB_NAME = libopenWS.a
-	LIB_FULLNAME = $(LIB_DIR)/$(LIB_NAME)
-
-install: $(LIB_FULLNAME)
-	cp -r $(INCLUDE_DIR) /usr/
-	cp $(LIB_FULLNAME) /usr/lib/
-
-else
-	LIB_NAME = libopenWS.dll
-	IMP_LIB_NAME = libopenWS.dll.a
-	LIB_FULLNAME = $(BIN_DIR)/$(LIB_NAME)
-	DLIBFLAGS += -Wl,--out-implib,$(LIB_DIR)/$(IMP_LIB_NAME)
-
-install: $(LIB_FULLNAME)
-	cp -r $(INCLUDE_DIR) /usr/
-	cp $(LIB_FULLNAME) /usr/bin/
-	cp $(LIB_DIR)/$(IMP_LIB_NAME) /usr/lib/
-
-endif
-
-LDFLAGS += -lglew32 -lglfw3 -lgdi32 -lopengl32
