@@ -1,40 +1,0 @@
-ifeq "$(PLATFORM)" "linux"
-	ifdef STATIC
-		SPLDFLAGS += -lopenWSs
-	else
-		SPLDFLAGS += -lopenWS
-	endif
-else
-	ifdef STATIC
-		EXECUTABLE_SUFFIX = .exe
-		SPLDFLAGS += -lopenWS
-	else
-		SPLDFLAGS += -lopenWS.dll
-	endif
-endif
-
-EXECUTABLES = $(patsubst $(SRC_DIR)/Sample/%.cpp, $(BIN_DIR)/%$(EXECUTABLE_SUFFIX), $(wildcard $(SRC_DIR)/Sample/*.cpp))
-
-ifeq ($(OS),Windows_NT)
-	SPLDFLAGS += -lglu32
-else
-	ifdef STATIC
-		SPLDFLAGS += -lopenWSs $(shell pkg-config --static --libs glu x11 xrandr xi xxf86vm glew glfw3) -static-libgcc
-	else
-		SPLDFLAGS += -lopenWS  $(shell pkg-config --static --libs glu x11 xrandr xi xxf86vm glew glfw3)
-	endif
-endif
-
-SPCXXFLAGS += $(CXXFLAGS) -L$(LIB_DIR)
-SPLDFLAGS += $(LDFLAGS)
-
-ifdef DEBUG
-	SPCXXFLAGS += -g
-else
-	SPCXXFLAGS += -O2
-endif
-
-sample: pre $(LIB_FULLNAME) $(EXECUTABLES)
-
-$(BIN_DIR)/%$(EXECUTABLE_SUFFIX): $(SRC_DIR)/Sample/%.cpp $(LIB_FULLNAME)
-	g++ -o $@ $< $(SPCXXFLAGS) $(SPLDFLAGS)
