@@ -1,6 +1,7 @@
 #include <openWS.h>
 #include <GL/gl.h>
 #include <GLFW/glfw3.h>
+#include <cstdio>
 
 float color[4][3] = {
 	{0.93359375f, 0.30859375f, 0.12890625f},
@@ -14,6 +15,11 @@ void display(int windowID, int) {
 	wsGetWindowUserPointer(windowID, (void**)&color);
 	glClearColor(color[0], color[1], color[2], 1.0f);
 	glClear(GL_COLOR_BUFFER_BIT);
+
+	wsWindowInfo info;
+	wsGetWindowInfo(windowID, &info);
+	printf("Window %s: Pos %3d, %3d, Size %3d, %3d\n",
+		info.name, info.position.x, info.position.y, info.size.x, info.size.y);
 }
 
 int main() {
